[tool.poetry]
name = "xpemlflow"
version = "0.1.0"
description = "mlops"
authors = [
    "Marcos Prochnow <marcosprochnow@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.119.0,<0.120.0"
pydantic = ">=2.12.2,<3.0.0"
seaborn = ">=0.13.2,<0.14.0"
scikit-learn = ">=1.7.2,<2.0.0"
numpy = ">=2.3.4,<3.0.0"
pandas = ">=2.3.3,<3.0.0"
uvicorn = ">=0.37.0,<0.38.0"
mlflow = ">=3.3.2,<4.0.0"
httpx = "^0.28.1"
pytest = "^8.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"